--- a/dayTwo-6-3-2021/daytwo.css
+++ b/dayTwo-6-3-2021/daytwo.css
@@ -18,7 +18,6 @@
 .nav1_content img{
     margin-left: 50px;
 }
-
 .nav1_content a{
     margin-right: 50px;
     color: white;
@@ -30,15 +29,20 @@
     align-items: baseline;
   
 }
+.nav2_content{
+    display: flex;
+}
+.nav2_content div i{
+    color: #01adb9;
+    transform: translateX(45px);
+}
+
 .nav2_content p{
-    margin-left: 45px;
+    margin-left: 70px;
     color: #01adb9;
 
 }
-.nav2_content i{
-    margin-right: 25px;
-   
-}
+
 .nav2_content_mid{
     font-size: 40px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -46,13 +50,17 @@
 .nav2_content input{
     height: 35px;
     color: rgb(220, 219, 219);
-    margin-right: 35px;
+   transform: translateX(20px);
+}
+.nav2_content_icon2{
+    transform: translateX(-80px);
+    margin-top: 10px;
 }
 hr{
     color: rgb(220, 219, 219);
 }
 
-.total_Contents{
+.total_Contents_content1{
     margin-left: 70px;
     margin-right: 70px;
 
@@ -68,7 +76,7 @@ hr{
     
     object-fit: contain;
 }
-.total_Contents h1{
+.total_Contents_content1 h1{
     margin-top:30px ;
     margin-bottom: 25px;
     
@@ -111,6 +119,7 @@ hr{
     color: #01adb9;
     font-size: 13px;
     margin-bottom: 10px;
+    
 }
 .sec3_content1 h2{
     font-size: 30px;
@@ -119,6 +128,7 @@ hr{
 }
 .sec3_content1 p{
     width: 550px;
+    transform: translateX(-20px);
 }
 .sec3_content2{
     margin-left: 60px;
@@ -129,6 +139,7 @@ hr{
 }
 .sec3_content2_content img{
     object-fit: contain;
+    transform: translateY(-1px);
    
 }
 .sec3_content2_content_first{
@@ -182,3 +193,251 @@ hr{
  .sec4_content1_content{
      height:250px;
  }
+ .sec4_content2{
+     margin-top: 10px;
+ }
+ .sec4_content2_content1 p{
+    margin-left: 8rem;
+     color: rgb(220, 219, 219);
+     font-size: 10px;
+    
+
+ }
+ .sec4_content2_content1 img{
+     width: 100%;
+     object-fit: contain;
+     
+ }
+ .sec4_content2_content2{
+     padding: auto;
+     background-color:rgb(235,243,244) ;
+     width:300px
+ }
+ .sec4_content2_content2 h1{
+    
+    font-size: 30px;
+
+ }
+ .sec4_content2_content2 h1,p,input,button{
+    margin-left: 20px;
+    margin-right: 20px;
+ }
+ .sec4_content2_content2 p{
+    
+   margin-bottom: 15px;
+
+ }
+ .sec4_content2_content2 input{
+   
+     height: 40px;
+     width:250px;
+     margin-bottom: 15px;
+ }
+ .button {
+    background-color:#01adb9; 
+    border: none;
+    color:white;
+    height: 40px;
+    width:255px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  .sec5_content1{
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+  }
+  .sec5_content1_content1 p{
+      font-weight: bolder;
+      color:#01adb9;
+  }
+
+  .sec5_content2{
+      display: flex;
+      justify-content: space-between;
+      margin-top: 30px;
+  }
+  .sec5_content2_content{
+      background-color: rgb(251,245,237);
+  }
+ .sec5_content2_content p{
+     width: 220px;
+   margin-top: 15px;
+   margin-bottom: 15px;
+ }
+ .sec5_content2_content h1{
+     text-align: center;
+ }
+
+ .section6{
+    margin-top: 30px;
+ }
+ .sec6_contents{
+     display: flex;
+     justify-content: space-between;
+    
+ }
+ .sec6_contents_left{
+     display: flex;
+     flex-direction: column;
+ }
+ .sec6_contents_left_content h1{
+    width: 350px;
+    transform: translateY(-10rem);
+    margin-left: 13rem;
+    font-size:25px;
+
+ }
+ .sec6_contents_left_content p{
+    width: 350px;
+    transform: translateY(-10rem);
+    margin-left: 13rem;
+ }
+ .sec6_contents_left_content {
+    height: 180px;
+ }
+
+
+ .sec6_contents_right{
+    display: flex;
+    flex-direction: column;
+}
+.sec6_contents_right_content h1{
+   width: 350px;
+   transform: translateY(-10rem);
+   margin-left: 13rem;
+   font-size:25px;
+
+}
+.sec6_contents_right_content p{
+   width: 350px;
+   transform: translateY(-10rem);
+   margin-left: 13rem;
+}
+.sec6_contents_right_content {
+   height: 180px;
+}
+
+.section7{
+    margin-top: 20px;
+   
+}
+.sec7_contents{
+   display: flex;
+   justify-content: space-between;
+}
+
+.total_Contents_content2{
+    background-color: rgb(251,245,237);
+    margin-top: 70px;
+    height:25rem;
+}
+.section8{
+  
+    margin-left: 50px;
+    margin-right:50px;
+    display: flex;
+    justify-content: space-around;
+    
+
+}
+
+.sec8_content1 div p{
+   margin-top: 80px;
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.sec8_content1 p{
+    width: 400px;
+    margin-top: 15px;
+    font-size:15px ;
+}
+.button2 {
+    background-color:#01adb9; 
+    border: none;
+    color:white;
+    height: 50px;
+    width:275px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 30px;
+  }
+
+  .sec8_content2_content{
+      height: 100px;
+  }
+  .sec8_content2_content div{
+     color: #01adb9;
+     margin-top: 95px;
+
+  }
+  .sec8_content2_content p{
+    width: 350px;
+   float: right;
+   transform: translateY(95px);
+ 
+  
+
+}
+.total_Contents_content3{
+    margin-top: 40px;
+    margin-left: 80px;
+    margin-right: 80px;
+}
+
+.section9{
+    display: flex;
+   
+    
+}
+.section9 h1{
+ flex: 5;
+}
+.section9 p{
+
+   margin-top: 2px;
+   color:#01adb9 ;
+}
+.section9  div{
+    color:#01adb9 ;
+    margin-top: 2px;
+}
+hr{
+    margin-top: 25px;
+    color: rgb(220, 219, 219);
+    margin-bottom:60px ;
+
+}
+.total_Contents_content4{
+    
+    background-color: rgb(251,245,237);
+   
+    height:350px;
+    width: 100%;
+    
+}
+.section10{
+    
+   transform: translateY(40px);
+    margin-left: 80px;
+    margin-right: 80px;
+   
+}
+
+.sec10_content1{
+    
+   width:300px;
+    display: flex;
+    justify-content: space-between ;
+    
+}
+
+
+
+
