--- a/dayThree-6-7-2021/test/test.css
+++ b/dayThree-6-7-2021/test/test.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -74,7 +74,7 @@ a.active,a:hover{
         background: #2c3e50;
         top: 80px;
         /* left: 0; */
-        left: -100%;
+        /* left: -100%;
         text-align: center;
         transition:all .5s;
     }
@@ -94,4 +94,88 @@ a:hover,a.active{
 #check:checked~il{
     left:0;
 }
+} */ 
+
+*{
+    margin: 0;
+    padding: 0;
+}
+.nav-bar{
+    width: 100%;
+    background: #2c3e50;
+    height: 75px;
+    padding: 10px 0;
+    box-sizing: border-box;
+    border-bottom: 1px solid #1a252f;
+
+}
+
+.nav-bar ul{
+width: 780px;
+height: 100%;
+margin: 0 auto;
+list-style: none;
+text-transform: uppercase;
+font-weight: bold;
+letter-spacing: 2px;
+}
+
+.nav-bar ul li{
+    width: 120px;
+    float: left;
+    text-align: center;
+    padding: 15px 0;
+    color:#fff;
+    margin-right: 10px;
+    transition:all .4s ease;
+}
+.nav-bar ul li:last-child{
+    margin-right: 0;
+}
+.nav-bar ul li:hover{
+    color:#18bc9c;
+
+}
+.nav-bar ul li:hover .mega-menu
+{
+    color: #fff;
+}
+.header-banner{
+    background: #18bc9c;
+    width: 100%;
+    height: 350px;
+}
+.mega-menu{
+    position:absolute;
+    top: 65px;
+    left: 0px; 
+    width: 100%;
+    /* height: 250px; */
+    background: #2c3e50;
+    transition: all .4s ease;
+    /* box-sizing: border-box; */
+    visibility: hidden;
+    opacity: 0;
+    /* display: none; */
+}
+
+.inner-mega-menu{
+     width: 24%;
+    float: left;
+    margin-right: 1%; 
+}
+
+.inner-mega-menu:last-child{
+    margin-right: 0%;
+}
+
+.inner-mega-menu p{
+    padding: 10px 0;
+    transition: all 4s ease;
+}
+
+.nav-bar ul li:hover .mega-menu{
+   visibility: visible;
+   opacity:1;
+   /* display: block; */
 }
