--- a/dayThree-6-7-2021/project3.css
+++ b/dayThree-6-7-2021/project3.css
@@ -208,9 +208,9 @@
     width: 100%;
     padding:100px 120px;
     background: linear-gradient(180deg ,rgb(245,246,246),rgb(231,232,233));  
-     /* display: flex;
+     display: flex;
      flex-direction: column; 
-     align-items: center;  */
+     /* align-items: center;  */
 
 }
 
@@ -274,7 +274,8 @@
    
  }
  .btn-belo-card{
-     margin-left: 29rem;
+     
+     align-self:center;
  }
  
 
